[package]
authors = ["n.stebbings@gmail.com"]
description = "Types for the hc_zome_recurrent_events zome"
documentation = "https://holochain-open-dev.github.io/recurrent_events"
edition = "2018"
homepage = "https://docs.rs/hc_zome_recurrent_events_types"
license = "MIT"
name = "hc_zome_recurrent_events_types"
repository = "https://github.com/holochain-open-dev/recurrent_events"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_recurrent_events_types"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.125", features = ["encoding"]}
